GN: Undefined behavior for subdivided cyclical single-point Catmull-Rom splines #102537

Closed
opened 2022-11-16 00:13:46 +01:00 by Mattias Fredriksson · 7 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15

Blender Version
Broken: version: 3.4.0 Beta, branch: master, commit date: 2022-11-15 01:30, hash: 56f783d883
Worked: Never? broken in 3.3.1 and likely since introduction of the Catmull-Rom type in the 'SetSplineType' node (which is not available in 3.0.0 or 3.2.1).

Short description of error

Cyclical Catmull-Rom splines with only a single control point generates undefined behavior in geometry nodes.

Exact steps for others to reproduce the error

Single point Catmull-Rom splines can easily generated using 'SetSplineType' on cyclical single point splines created by either:

a) Through 'SetSplineCyclic' node on a single point spline.
b) By deleting controlpoints from a cyclic spline until only one remains.

Presumably there are many ways to generate undefined behavior for cyclic splines with a single controlpoint (not only for Catmull-Rom type as it is fairly easy to trigger BLI_asserts in debug mode). A simple way to do so is to use the subdivision node on Catmull-Rom splines (see below).

SinglePointCatmullUndefined.gif

Reference file

cyclic_single_point_bug_report.blend

Plausible solutions

  • Limit the possibility to create cyclical splines (i.e. 'SetSplineCyclic' should not enable the cyclic property on the node).
  • Always treat single point splines as an edge case in geometry nodes (which would ignore the cyclic property).
  • Profit?
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15 **Blender Version** Broken: version: 3.4.0 Beta, branch: master, commit date: 2022-11-15 01:30, hash: `56f783d883` Worked: Never? broken in 3.3.1 and likely since introduction of the Catmull-Rom type in the 'SetSplineType' node (which is not available in 3.0.0 or 3.2.1). **Short description of error** Cyclical Catmull-Rom splines with only a single control point generates undefined behavior in geometry nodes. **Exact steps for others to reproduce the error** Single point Catmull-Rom splines can easily generated using 'SetSplineType' on cyclical single point splines created by either: a) Through 'SetSplineCyclic' node on a single point spline. b) By deleting controlpoints from a cyclic spline until only one remains. Presumably there are many ways to generate undefined behavior for cyclic splines with a single controlpoint (not only for Catmull-Rom type as it is fairly easy to trigger BLI_asserts in debug mode). A simple way to do so is to use the subdivision node on Catmull-Rom splines (see below). ![SinglePointCatmullUndefined.gif](https://archive.blender.org/developer/F13919860/SinglePointCatmullUndefined.gif) **Reference file** [cyclic_single_point_bug_report.blend](https://archive.blender.org/developer/F13919865/cyclic_single_point_bug_report.blend) **Plausible solutions** - Limit the possibility to create cyclical splines (i.e. 'SetSplineCyclic' should not enable the cyclic property on the node). - Always treat single point splines as an edge case in geometry nodes (which would ignore the cyclic property). - Profit?

Added subscriber: @Osares

Added subscriber: @Osares

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can't recreate it in another file, but yours does, so yes.

I can't recreate it in another file, but yours does, so yes.
Hans Goudey self-assigned this 2022-11-16 00:56:12 +01:00

This issue was referenced by f0cd1fed18

This issue was referenced by f0cd1fed189b5747268bfce8daad13093dbcabb1

This issue was referenced by f7e0317b96

This issue was referenced by f7e0317b96259c3413498596d067e9fbe8cebe34
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102537
No description provided.